src/z80asm/z80asm2/t/30-directive/expected/incbin_13.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/incbin_13.asm
Assembling t/30-directive/input/incbin_13.asm...
t/30-directive/input/incbin_13.asm:1:30: error: Unexpected token after BINARY: extra
    #incbin "file_not_found.bin" extra
                                 ^
t/30-directive/input/incbin_13.asm:1:9: error: File not found: file_not_found.bin
    #incbin "file_not_found.bin" extra
            ^
